--- a/УПИС_Задание_№5.ipynb
+++ b/УПИС_Задание_№5.ipynb
@@ -19,7 +19,7 @@
         "| R2  | Риск «золотого молотка» — чрезмерное усложнение ИИ | Средняя | Среднее | Средний | Снижение | • Начать с простого MVP-ИИ<br>• Ограничить глубину логики<br>• Сравнивать с базовыми эвристиками |\n",
         "| R3  | Дисбаланс карт | Высокая | Высокое | Высокое | Снижение | • Тестировать колоды <br>• Регулярно корректировать параметры |\n",
         "| R4  | Сложность UI/UX (неудобный интерфейс для игрока) | Средняя | Среднее | Средний | Снижение | • Делать прототипы интерфейса<br>• Получать обратную связь от игроков<br>• Улучшать по результатам тестов |\n",
-        "| R5  | Сложности работы в команде | Средняя | Высокое | Критический | Снижение | • Использовать систему задач (Trello/Jira/Yougile)<br>• Регулярные встречи<br>• Чёткое распределение ролей |\n",
+        "| R5  | Сложности работы в команде | Средняя | Высокое | Критический | Снижение | • Использовать систему задач (Trello/Jira/Yougile)<br>• Регулярные встречи/созвоны для обсуждения текущего положения дел, ну или хотя бы поболтать<br>• Чёткое распределение ролей |\n",
         "| R6  | Недостаточное тестирование | Средняя | Высокое | Критический | Снижение | • Планировать время на тестирование<br>• Привлекать внешних тестировщиков (всех друзей и друзей друзей) |\n",
         "| R7  | Срыв сроков из-за недооценки сложности ИИ или остальной части игры | Высокая | Высокое | Критический | Избежание | • Делить проект на этапы<br>• Определить и делать в первую очередь наиболее необходимые задачи<br>• Закладывать запас времени на все |\n",
         "| R8  | Проблемы с работой ПО (баги, ошибки в Unity) | Средняя | Низкое | Низкое | Снижение | • Использовать стабильные версии Unity<br>• Регулярные резервные копии |\n"
