--- a/УПИС_Задание_№5.ipynb
+++ b/УПИС_Задание_№5.ipynb
@@ -297,6 +297,51 @@
     },
     {
       "cell_type": "markdown",
+      "id": "f427a09d",
+      "metadata": {},
+      "source": [
+        "Критический путь"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "8ae85131",
+      "metadata": {},
+      "source": [
+        "| ID | Задача | Длительность (дни) | Предшественники | Начало | Окончание |\n",
+        "|----|--------|-------------------|----------------|--------|-----------|\n",
+        "| 1 | **Анализ и планирование** | **15** | | **01.06.2025** | **15.06.2025** |\n",
+        "| 1.1 | Утверждение ТЗ и архитектуры | 15 | - | 01.06.2025 | 15.06.2025 |\n",
+        "| 2 | **Разработка игры** | **130** | | **16.06.2025** | **13.10.2025** |\n",
+        "| 2.1 | Реализация базового игрового цикла | 61 | 1.1 | 16.06.2025 | 15.08.2025 |\n",
+        "| 2.2 | Разработка всех карточек зданий и прочих игровых элементов | 61 | 1.1 | 16.06.2025 | 15.08.2025 |\n",
+        "| 2.3 | Первый внутренний прототип | 17 | 2.1, 2.2 | 16.08.2025 | 01.09.2025 |\n",
+        "| 2.4 | Подготовка и публикация прототипа в Steam | 42 | 2.3 | 02.09.2025 | 13.10.2025 |\n",
+        "| 3 | **Разработка ИИ-оппонента** | **154** | | **14.10.2025** | **15.03.2026** |\n",
+        "| 3.1 | Проектирование логики ИИ | 48 | 2.4 | 14.10.2025 | 30.11.2025 |\n",
+        "| 3.2 | Реализация базового ИИ | 62 | 3.1 | 01.12.2025 | 31.01.2026 |\n",
+        "| 3.3 | Добавление стратегий поведения | 31 | 3.2 | 01.02.2026 | 02.03.2026 |\n",
+        "| 3.4 | Плейтесты ИИ | 13 | 3.3 | 03.03.2026 | 15.03.2026 |\n",
+        "| 4 | **Разработка игры (продолжение)** | **61** | | **16.03.2026** | **15.05.2026** |\n",
+        "| 4.1 | Интеграция QoL-изменений | 31 | 3.4 | 16.03.2026 | 15.04.2026 |\n",
+        "| 4.2 | Доработка UI/UX | 31 | 3.4 | 16.03.2026 | 15.04.2026 |\n",
+        "| 4.3 | Интеграция ИИ в игровой цикл | 30 | 4.1, 4.2 | 16.04.2026 | 15.05.2026 |\n",
+        "| 5 | **Тестирование и подготовка** | **17** | | **16.05.2026** | **01.06.2026** |\n",
+        "| 5.1 | Финальное тестирование | 10 | 4.3 | 16.05.2026 | 25.05.2026 |\n",
+        "| 5.2 | Документация и презентация | 7 | 5.1 | 26.05.2026 | 01.06.2026 |"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "81466383",
+      "metadata": {},
+      "source": [
+        "Критический путь:\n",
+        "1.1 → 2.1 / 2.2 → 2.3 → 2.4 → 3.1 → 3.2 → 3.3 → 3.4 → 4.1 / 4.2 → 4.3 → 5.1 → 5.2"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "3d353cee",
       "metadata": {},
       "source": [
