--- a/УПИС_Задание_№6.ipynb
+++ b/УПИС_Задание_№6.ipynb
@@ -50,11 +50,66 @@
         "- **Критерий проверки:** Игра корректно завершает партию и отображает результаты\n",
         "\n",
         "### ФТ-007: Настройки игры\n",
-        "- **Описание:** Игрок может изменить параметры игры: звук, язык, сложность ИИ.\n",
+        "- **Описание:** Игрок может изменить параметры игры: звук, язык, параметры экрана.\n",
         "- **Входные данные:** Выбор параметров\n",
         "- **Выходные данные:** Обновлённые настройки\n",
         "- **Приоритет:** Средний\n",
-        "- **Критерий проверки:** Настройки применяются и сохраняются\n"
+        "- **Критерий проверки:** Настройки применяются и сохраняются\n",
+        "\n",
+        "### ФТ-008: Отображение ресурсов\n",
+        "- **Описание:** Система должна отображать текущее количество ресурсов игрока (золото, очки).\n",
+        "- **Входные данные:** Состояние партии\n",
+        "- **Выходные данные:** Обновлённый интерфейс ресурсов\n",
+        "- **Приоритет:** Высокий\n",
+        "- **Критерий проверки:** Значения ресурсов обновляются после каждого действия\n",
+        "\n",
+        "### ФТ-009: Подсказки и обучение\n",
+        "- **Описание:** Система должна предоставлять базовое обучение для новых игроков.\n",
+        "- **Входные данные:** Выбор режима обучения\n",
+        "- **Выходные данные:** Игровая партия с ИИ-оппонентом с пошаговым обучением основ игры\n",
+        "- **Приоритет:** Средний\n",
+        "- **Критерий проверки:** Обучение проходится полностью\n",
+        "\n",
+        "### ФТ-010: Логирование ходов\n",
+        "- **Описание:** Система должна вести журнал действий игроков и ИИ.\n",
+        "- **Входные данные:** Совершённые действия\n",
+        "- **Выходные данные:** Записи в журнале\n",
+        "- **Приоритет:** Средний\n",
+        "- **Критерий проверки:** Все ходы фиксируются и доступны для просмотра\n",
+        "\n",
+        "### ФТ-011: Система очередности ходов\n",
+        "- **Описание:** Система должна обеспечивать строгую очередность ходов между игроком и ИИ.\n",
+        "- **Входные данные:** Состояние партии\n",
+        "- **Выходные данные:** Передача хода следующему участнику\n",
+        "- **Приоритет:** Критический\n",
+        "- **Критерий проверки:** Ходы всегда выполняются в правильной последовательности\n",
+        "### ФТ-012: Система победных условий\n",
+        "- **Описание:** Система должна проверять выполнение условий победы (например, набор очков, контроль территории).\n",
+        "- **Входные данные:** Состояние партии\n",
+        "- **Выходные данные:** Сигнал о завершении игры\n",
+        "- **Приоритет:** Критический\n",
+        "- **Критерий проверки:** Победа фиксируется при достижении условий\n",
+        "\n",
+        "### ФТ-013: Визуальные эффекты\n",
+        "- **Описание:** Система должна отображать анимации при ключевых действиях (розыгрыш карты, строительство).\n",
+        "- **Входные данные:** Игровое событие\n",
+        "- **Выходные данные:** Анимация\n",
+        "- **Приоритет:** Средний\n",
+        "- **Критерий проверки:** Анимации отображаются без ошибок\n",
+        "\n",
+        "### ФТ-014: Звуковое сопровождение\n",
+        "- **Описание:** Система должна воспроизводить звуковые эффекты и музыку в зависимости от событий.\n",
+        "- **Входные данные:** Игровое событие\n",
+        "- **Выходные данные:** Звуковой эффект или музыка\n",
+        "- **Приоритет:** Средний\n",
+        "- **Критерий проверки:** Звуки соответствуют событиям и регулируются настройками\n",
+        "\n",
+        "### ФТ-015: Экран статистики после партии\n",
+        "- **Описание:** После завершения игры система должна отображать информацию о сыгранной партии (количество построенных этажей, отсортированный по убыванию таблица игроков).\n",
+        "- **Входные данные:** Итоговое состояние партии\n",
+        "- **Выходные данные:** Экран статистики\n",
+        "- **Приоритет:** Высокий\n",
+        "- **Критерий проверки:** Статистика отображается корректно и соответствует данным партии\n"
       ]
     },
     {
@@ -83,6 +138,103 @@
         "- **Описание:** Сложность ИИ должна настраиваться от простого до продвинутого уровня.\n",
         "- **Категория:** Масштабируемость\n",
         "- **Критерий проверки:** Настройки сложности влияют на поведение ИИ в тестах\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "7f5cc3ac",
+      "metadata": {},
+      "source": [
+        "## 3. \n",
+        "## 1. Пользовательские роли\n",
+        "\n",
+        "### 1.1. Игрок\n",
+        "**Описание:** Конечный пользователь, запускающий игру и взаимодействующий с игровым процессом.  \n",
+        "**Основные задачи:**\n",
+        "- Запуск новой игровой партии\n",
+        "- Совершение игровых ходов (выбор карт, бросок кубиков, строительство зданий)\n",
+        "- Управление этажами главной базы\n",
+        "\n",
+        "### 1.2. Разработчик\n",
+        "**Описание:** Член команды, выполняющий задачи по разработке\n",
+        "**Основные задачи:**\n",
+        "- Добавление и редактирование карт и игровых механик\n",
+        "- Изменения игрового баланса\n",
+        "- Отладка и исправление ошибок\n",
+        "- Подготовка билдов для публикации\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 2. Варианты использования (Use Cases)\n",
+        "\n",
+        "### 2.1. Игрок\n",
+        "\n",
+        "#### UC-001: Запуск новой партии\n",
+        "- **Актор:** Игрок  \n",
+        "- **Предусловие:** Игра установлена и запущена  \n",
+        "- **Сценарий:**\n",
+        "  1. Игрок выбирает режим игры (против ИИ или другого игрока).\n",
+        "  2. Игрок выбирает фракцию.\n",
+        "  3. Система инициализирует игровое поле и раздаёт стартовые карты.\n",
+        "- **Результат:** Начинается новая партия.\n",
+        "\n",
+        "#### UC-002: Совершение хода\n",
+        "- **Актор:** Игрок  \n",
+        "- **Предусловие:** Игра запущена, идёт партия  \n",
+        "- **Сценарий:**\n",
+        "  1. Игрок бросает кубики.\n",
+        "  2. Игрок выбирает карту из руки.\n",
+        "  3. Игрок применяет карту или строит здание.\n",
+        "  4. Система обновляет состояние поля и ресурсов.\n",
+        "- **Результат:** Ход игрока завершён, управление передано ИИ.\n",
+        "\n",
+        "#### UC-003: Настройка игры\n",
+        "- **Актор:** Игрок  \n",
+        "- **Предусловие:** Игра запущена, доступно меню настроек  \n",
+        "- **Сценарий:**\n",
+        "  1. Игрок открывает меню настроек.\n",
+        "  2. Изменяет параметры (звук, язык, сложность ИИ).\n",
+        "  3. Сохраняет изменения.\n",
+        "- **Результат:** Настройки применены.\n",
+        "\n",
+        "#### UC-004: Завершение партии\n",
+        "- **Актор:** Игрок  \n",
+        "- **Предусловие:** Выполнены условия победы или поражения  \n",
+        "- **Сценарий:**\n",
+        "  1. Система фиксирует выполнение условий окончания.\n",
+        "  2. Отображает экран результатов (победа/поражение, статистика).\n",
+        "- **Результат:** Партия завершена.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 2.2. Разработчик\n",
+        "\n",
+        "#### UC-101: Добавление новой карты\n",
+        "- **Актор:** Разработчик  \n",
+        "- **Предусловие:** Доступ к редактору карт  \n",
+        "- **Сценарий:**\n",
+        "  1. Разработчик открывает модуль редактирования карт.\n",
+        "  2. Вводит параметры карты (название, эффект, стоимость).\n",
+        "  3. Сохраняет изменения.\n",
+        "- **Результат:** Новая карта доступна в игре.\n",
+        "\n",
+        "#### UC-102: Настройка ИИ\n",
+        "- **Актор:** Разработчик  \n",
+        "- **Предусловие:** Доступ к параметрам ИИ  \n",
+        "- **Сценарий:**\n",
+        "  1. Разработчик открывает модуль конфигурации ИИ.\n",
+        "  2. Настраивает стратегии поведения (агрессивная, защитная и т.д.).\n",
+        "  3. Сохраняет изменения.\n",
+        "- **Результат:** ИИ использует обновлённые стратегии.\n",
+        "\n",
+        "#### UC-103: Тестирование баланса\n",
+        "- **Актор:** Разработчик  \n",
+        "- **Предусловие:** Игра собрана в тестовом режиме  \n",
+        "- **Сценарий:**\n",
+        "  1. Разработчик запускает серию автоматических или ручных партий.\n",
+        "  2. Анализирует результаты (частота побед, эффективность карт).\n",
+        "  3. Вносит корректировки в параметры карт или ИИ.\n",
+        "- **Результат:** Баланс игры улучшен.\n"
       ]
     }
   ],
