--- a/УПИС_Задание_№6.ipynb
+++ b/УПИС_Задание_№6.ipynb
@@ -2,6 +2,234 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "efd8307d",
+      "metadata": {},
+      "source": [
+        "# СПЕЦИФИКАЦИЯ ТРЕБОВАНИЙ К ПРОГРАММНОМУ ОБЕСПЕЧЕНИЮ\n",
+        "\n",
+        "## 1. ВВЕДЕНИЕ\n",
+        "\n",
+        "### 1.1. Цель документа\n",
+        "Данный документ определяет функциональные и нефункциональные требования к программному обеспечению «Карточная игра на Unity с ИИ‑оппонентом». Спецификация служит основой для проектирования, разработки, тестирования и приемки системы.\n",
+        "\n",
+        "### 1.2. Область применения\n",
+        "Система предназначена для реализации цифровой карточной игры с элементами стратегии. Основные пользователи — игроки, которые будут взаимодействовать с игрой, и разработчики, которые обеспечивают поддержку, развитие и тестирование проекта.\n",
+        "\n",
+        "### 1.3. Определения, акронимы и сокращения\n",
+        "- **ИИ** — искусственный интеллект, программный модуль, управляющий действиями оппонента.\n",
+        "- **UI** — пользовательский интерфейс.\n",
+        "- **QoL** — улучшения качества жизни (Quality of Life), повышающие удобство использования игры.\n",
+        "\n",
+        "### 1.4. Пользовательские роли\n",
+        "**Игрок**\n",
+        "- Описание: Конечный пользователь, запускающий игру и взаимодействующий с игровым процессом.\n",
+        "- Количество: Неограниченно.\n",
+        "- Технический уровень: Базовый.\n",
+        "- Основные задачи: Запуск партии, выполнение ходов, взаимодействие с картами и т.д., настройка параметров.\n",
+        "\n",
+        "**Разработчик**\n",
+        "- Описание: Член команды разработки, отвечающий за поддержку и развитие игры.\n",
+        "- Количество: 1–5.\n",
+        "- Технический уровень: Высокий.\n",
+        "- Основные задачи: Настройка ИИ, добавление карт, тестирование баланса, исправление ошибок.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 2. ФУНКЦИОНАЛЬНЫЕ ТРЕБОВАНИЯ\n",
+        "\n",
+        "### 2.1. Игровой процесс\n",
+        "\n",
+        "**ФТ-001: Запуск новой партии**  \n",
+        "- **Описание:** Система должна позволять игроку начать новую игру, выбрав фракцию и тип противника.  \n",
+        "- **Входные данные:** Выбор фракции, режим игры.  \n",
+        "- **Выходные данные:** Инициализированное игровое поле, стартовые карты.  \n",
+        "- **Бизнес-правила:** Начальные условия одинаковы для всех игроков.  \n",
+        "- **Приоритет:** Критический.  \n",
+        "- **Критерий проверки:** Игра запускается с корректными параметрами.\n",
+        "\n",
+        "**ФТ-002: Ход игрока**  \n",
+        "- **Описание:** Игрок должен иметь возможность совершать ход: бросить кубики, выбрать карту, построить здание.  \n",
+        "- **Входные данные:** Команда игрока.  \n",
+        "- **Выходные данные:** Изменение состояния игры, обновление UI.  \n",
+        "- **Приоритет:** Критический.  \n",
+        "- **Критерий проверки:** Ход выполняется корректно.\n",
+        "\n",
+        "**ФТ-003: Ход ИИ-оппонента**  \n",
+        "- **Описание:** ИИ принимает решения на основе состояния игры и стратегии.  \n",
+        "- **Входные данные:** Состояние поля, карты, ресурсы.  \n",
+        "- **Выходные данные:** Действие ИИ.  \n",
+        "- **Приоритет:** Критический.  \n",
+        "- **Критерий проверки:** ИИ совершает валидные действия.\n",
+        "\n",
+        "**ФТ-004: Система очередности ходов**  \n",
+        "- **Описание:** Система должна обеспечивать строгую очередность ходов между игроком и ИИ.  \n",
+        "- **Входные данные:** Состояние партии.  \n",
+        "- **Выходные данные:** Передача хода следующему участнику.  \n",
+        "- **Приоритет:** Критический.  \n",
+        "- **Критерий проверки:** Ходы выполняются в правильной последовательности.\n",
+        "\n",
+        "### 2.2. Управление ресурсами и картами\n",
+        "\n",
+        "**ФТ-005: Управление картами**  \n",
+        "- **Описание:** Игрок может просматривать, использовать, продавать и заменять карты.  \n",
+        "- **Входные данные:** Выбор карты.  \n",
+        "- **Выходные данные:** Обновлённая рука, ресурсы.  \n",
+        "- **Приоритет:** Высокий.  \n",
+        "- **Критерий проверки:** Карты корректно обрабатываются.\n",
+        "\n",
+        "**ФТ-006: Строительство зданий**  \n",
+        "- **Описание:** Игрок может строить здания на доступных тайлах.  \n",
+        "- **Входные данные:** Выбор карты, тайла.  \n",
+        "- **Выходные данные:** Построенное здание.  \n",
+        "- **Приоритет:** Высокий.  \n",
+        "- **Критерий проверки:** Здание появляется на поле.\n",
+        "\n",
+        "**ФТ-007: Отображение ресурсов**  \n",
+        "- **Описание:** Система отображает текущее количество ресурсов игрока.  \n",
+        "- **Входные данные:** Состояние партии.  \n",
+        "- **Выходные данные:** Интерфейс ресурсов.  \n",
+        "- **Приоритет:** Высокий.  \n",
+        "- **Критерий проверки:** Значения обновляются после каждого действия.\n",
+        "\n",
+        "### 2.3. Поддержка игрока\n",
+        "\n",
+        "**ФТ-008: Подсказки и обучение**  \n",
+        "- **Описание:** Система предоставляет базовое обучение для новых игроков.  \n",
+        "- **Входные данные:** Выбор режима обучения.  \n",
+        "- **Выходные данные:** Пошаговое обучение.  \n",
+        "- **Приоритет:** Средний.  \n",
+        "- **Критерий проверки:** Обучение проходится полностью.\n",
+        "\n",
+        "**ФТ-009: Настройки игры**  \n",
+        "- **Описание:** Игрок может изменить параметры игры: звук, язык, параметры экрана.  \n",
+        "- **Входные данные:** Выбор параметров.  \n",
+        "- **Выходные данные:** Обновлённые настройки.  \n",
+        "- **Приоритет:** Средний.  \n",
+        "- **Критерий проверки:** Настройки применяются.\n",
+        "\n",
+        "### 2.4. Завершение и анализ партии\n",
+        "\n",
+        "**ФТ-010: Завершение партии**  \n",
+        "- **Описание:** Игра завершается при выполнении условий победы или поражения.  \n",
+        "- **Входные данные:** Состояние игры.  \n",
+        "- **Выходные данные:** Экран завершения.  \n",
+        "- **Приоритет:** Критический.  \n",
+        "- **Критерий проверки:** Игра корректно завершает партию.\n",
+        "\n",
+        "**ФТ-011: Система победных условий**  \n",
+        "- **Описание:** Система проверяет выполнение условий победы.  \n",
+        "- **Входные данные:** Состояние партии.  \n",
+        "- **Выходные данные:** Сигнал о завершении.  \n",
+        "- **Приоритет:** Критический.  \n",
+        "- **Критерий проверки:** Победа фиксируется корректно.\n",
+        "\n",
+        "**ФТ-012: Логирование ходов**  \n",
+        "- **Описание:** Система ведёт журнал действий игроков и ИИ.  \n",
+        "- **Входные данные:** Совершённые действия.  \n",
+        "- **Выходные данные:** Записи в журнале.  \n",
+        "- **Приоритет:** Средний.  \n",
+        "- **Критерий проверки:** Все ходы фиксируются.\n",
+        "\n",
+        "**ФТ-013: Экран статистики после партии**  \n",
+        "- **Описание:** После завершения игры отображается статистика.  \n",
+        "- **Входные данные:** Итоговое состояние партии.  \n",
+        "- **Выходные данные:** Экран статистики.  \n",
+        "- **Приоритет:** Высокий.  \n",
+        "- **Критерий проверки:** Статистика соответствует данным партии.\n",
+        "\n",
+        "### 2.5. Аудио-визуальное сопровождение\n",
+        "\n",
+        "**ФТ-014: Визуальные эффекты**  \n",
+        "- **Описание:** Система отображает анимации при ключевых действиях.  \n",
+        "- **Входные данные:** Игровое событие.  \n",
+        "- **Выходные данные:** Анимация.  \n",
+        "- **Приоритет:** Средний.  \n",
+        "- **Критерий проверки:** Анимации отображаются без ошибок.\n",
+        "\n",
+        "**ФТ-015: Звуковое сопровождение**  \n",
+        "- **Описание:** Система воспроизводит звуковые эффекты и музыку.  \n",
+        "- **Входные данные:** Игровое событие.  \n",
+        "- **Выходные данные:** Звуковой эффект или музыка.  \n",
+        "- **Приоритет:** Средний.  \n",
+        "- **Критерий проверки:** Звуки соответствуют событиям.\n",
+        "\n",
+        "---\n",
+        "## 2. НЕФУНКЦИОНАЛЬНЫЕ ТРЕБОВАНИЯ\n",
+        "\n",
+        "### НФТ-П-001: Использование ресурсов\n",
+        "- **Описание:** Игра должна стабильно работать на ПК с 6 ГБ ОЗУ и видеокартой уровня Intel HD Graphics 4000 / Radeon R7 без фризов.\n",
+        "- **Категория:** Производительность\n",
+        "- **Критерий проверки:** FPS не ниже 60\n",
+        "\n",
+        "### НФТ-Н-001: Доступность\n",
+        "- **Описание:** Игра должна быть доступна для запуска и прохождения без сбоев\n",
+        "- **Категория:** Надёжность\n",
+        "- **Критерий проверки:** Лог ошибок показывает не более 1 критического сбоя на 100 запусков\n",
+        "\n",
+        "### НФТ-Ю-001: Интуитивность интерфейса\n",
+        "- **Описание:** Игрок должен понимать базовые действия без обучения — начать игру, сделать ход, выбрать карту.\n",
+        "- **Категория:** Удобство использования\n",
+        "- **Критерий проверки:** 90% тестировщиков успешно совершают базовый ход без инструкций\n",
+        "\n",
+        "### НФТ-С-002: Масштабируемость ИИ\n",
+        "- **Описание:** Сложность ИИ должна настраиваться от простого до продвинутого уровня.\n",
+        "- **Категория:** Масштабируемость\n",
+        "- **Критерий проверки:** Настройки сложности влияют на поведение ИИ в тестах\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 4. ТРЕБОВАНИЯ К ИНТЕРФЕЙСАМ\n",
+        "\n",
+        "### 4.1. Пользовательский интерфейс\n",
+        "- **Главное меню**: запуск новой партии, выбор режима (против ИИ или игрока), доступ к обучению, настройкам и выходу из игры.  \n",
+        "- **Игровое поле**: отображение карт на руках, ресурсов, текущего игрока, активных эффектов и этажей базы.  \n",
+        "- **Экран обучения**: пошаговые подсказки и инструкции для новых игроков.  \n",
+        "- **Экран завершения партии**: отображение результата (победа/поражение), статистики и таблицы игроков.  \n",
+        "- **Меню настроек**: изменение параметров (звук, язык, параметры экрана).  \n",
+        "\n",
+        "### 4.2. Программный интерфейс (API)\n",
+        "- Внешнего API для сторонних систем не предусмотрено.  \n",
+        "- Внутренние модули игры должны взаимодействовать через чётко определённые интерфейсы (например, модуль ИИ ↔ модуль игрового поля ↔ модуль UI).  \n",
+        "- Интерфейсы должны обеспечивать передачу состояния игры, ресурсов и событий между компонентами.\n",
+        "\n",
+        "### 4.3. Интерфейсы с внешними системами\n",
+        "- Интеграция с платформой распространения (Steam) для публикации и обновлений.  \n",
+        "- Использование стандартных библиотек Unity для работы с графикой, звуком и вводом.  \n",
+        "- Взаимодействие с внешними системами хранения данных не требуется (игра не сохраняет персональные данные).\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 5. ОГРАНИЧЕНИЯ И ДОПУЩЕНИЯ\n",
+        "\n",
+        "### 5.1. Ограничения\n",
+        "**ОГР-001:** Игра должна работать только на настольных ОС (Windows 10+, macOS 12+).  \n",
+        "**ОГР-002:** Минимальные системные требования: 8 ГБ ОЗУ, видеокарта уровня GTX 1050, процессор не ниже Intel i5 7‑го поколения.  \n",
+        "\n",
+        "### 5.2. Допущения\n",
+        "**ДОП-001:** Игроки обладают базовыми навыками работы с ПК и знакомы с жанром карточных игр.  \n",
+        "**ДОП-002:** Разработчики имеют опыт работы с Unity и C#.  \n",
+        "**ДОП-003:** Для тестирования и публикации используется платформа Steam.  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 6. КРИТЕРИИ ПРИЕМКИ\n",
+        "\n",
+        "### 6.1. Функциональная приемка\n",
+        "**КП-Ф-001:** Все 15 функциональных требований реализованы и проверены тестами (запуск партии, ходы игрока и ИИ, управление картами, строительство, завершение партии, статистика и т.д.).  \n",
+        "\n",
+        "### 6.2. Нефункциональная приемка\n",
+        "**КП-НФ-001:** Игра стабильно работает на целевых системах с производительностью не ниже 30 FPS, без критических сбоев в течение 10 тестовых партий подряд.  \n",
+        "\n",
+        "### 6.3. Документация\n",
+        "**КП-Д-001:** Подготовлены руководство пользователя (описание интерфейсов и правил игры) и техническая документация (описание архитектуры, модулей и интерфейсов).  \n",
+        "\n",
+        "### 6.4. Тестирование\n",
+        "**КП-Т-001:** Проведено пользовательское приемочное тестирование (UAT) с положительными результатами от не менее 10 тестовых пользователей  \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "a86917d6",
       "metadata": {},
       "source": [
@@ -159,7 +387,7 @@
         "**Описание:** Член команды, выполняющий задачи по разработке\n",
         "**Основные задачи:**\n",
         "- Добавление и редактирование карт и игровых механик\n",
-        "- Изменения игрового баланса\n",
+        "- Изменения игрового баланса, а также правки в поведении ИИ\n",
         "- Отладка и исправление ошибок\n",
         "- Подготовка билдов для публикации\n",
         "\n",
@@ -175,35 +403,27 @@
         "- **Сценарий:**\n",
         "  1. Игрок выбирает режим игры (против ИИ или другого игрока).\n",
         "  2. Игрок выбирает фракцию.\n",
-        "  3. Система инициализирует игровое поле и раздаёт стартовые карты.\n",
+        "  3. Система инициализирует игровое поле и выдаёт стартовые карты.  \n",
         "- **Результат:** Начинается новая партия.\n",
         "\n",
-        "#### UC-002: Совершение хода\n",
+        "#### UC-002: Совершение игрового хода\n",
         "- **Актор:** Игрок  \n",
-        "- **Предусловие:** Игра запущена, идёт партия  \n",
+        "- **Предусловие:** Идёт активная партия  \n",
         "- **Сценарий:**\n",
         "  1. Игрок бросает кубики.\n",
         "  2. Игрок выбирает карту из руки.\n",
         "  3. Игрок применяет карту или строит здание.\n",
-        "  4. Система обновляет состояние поля и ресурсов.\n",
-        "- **Результат:** Ход игрока завершён, управление передано ИИ.\n",
+        "  4. Система обновляет состояние поля и ресурсов.  \n",
+        "- **Результат:** Ход игрока завершён, управление передано следующему игроку.\n",
         "\n",
-        "#### UC-003: Настройка игры\n",
+        "#### UC-003: Управление этажами базы\n",
         "- **Актор:** Игрок  \n",
-        "- **Предусловие:** Игра запущена, доступно меню настроек  \n",
+        "- **Предусловие:** У игрока есть доступные ресурсы  \n",
         "- **Сценарий:**\n",
-        "  1. Игрок открывает меню настроек.\n",
-        "  2. Изменяет параметры (звук, язык, сложность ИИ).\n",
-        "  3. Сохраняет изменения.\n",
-        "- **Результат:** Настройки применены.\n",
-        "\n",
-        "#### UC-004: Завершение партии\n",
-        "- **Актор:** Игрок  \n",
-        "- **Предусловие:** Выполнены условия победы или поражения  \n",
-        "- **Сценарий:**\n",
-        "  1. Система фиксирует выполнение условий окончания.\n",
-        "  2. Отображает экран результатов (победа/поражение, статистика).\n",
-        "- **Результат:** Партия завершена.\n",
+        "  1. Игрок выбирает этаж базы для строительства или улучшения.\n",
+        "  2. Система проверяет наличие ресурсов.\n",
+        "  3. При достаточном количестве ресурсов этаж строится или улучшается.  \n",
+        "- **Результат:** Этаж базы обновлён, ресурсы списаны.\n",
         "\n",
         "---\n",
         "\n",
@@ -215,26 +435,37 @@
         "- **Сценарий:**\n",
         "  1. Разработчик открывает модуль редактирования карт.\n",
         "  2. Вводит параметры карты (название, эффект, стоимость).\n",
-        "  3. Сохраняет изменения.\n",
+        "  3. Сохраняет изменения.  \n",
         "- **Результат:** Новая карта доступна в игре.\n",
         "\n",
-        "#### UC-102: Настройка ИИ\n",
-        "- **Актор:** Разработчик  \n",
-        "- **Предусловие:** Доступ к параметрам ИИ  \n",
-        "- **Сценарий:**\n",
-        "  1. Разработчик открывает модуль конфигурации ИИ.\n",
-        "  2. Настраивает стратегии поведения (агрессивная, защитная и т.д.).\n",
-        "  3. Сохраняет изменения.\n",
-        "- **Результат:** ИИ использует обновлённые стратегии.\n",
-        "\n",
-        "#### UC-103: Тестирование баланса\n",
+        "#### UC-102: Изменение игрового баланса\n",
         "- **Актор:** Разработчик  \n",
         "- **Предусловие:** Игра собрана в тестовом режиме  \n",
         "- **Сценарий:**\n",
-        "  1. Разработчик запускает серию автоматических или ручных партий.\n",
-        "  2. Анализирует результаты (частота побед, эффективность карт).\n",
-        "  3. Вносит корректировки в параметры карт или ИИ.\n",
-        "- **Результат:** Баланс игры улучшен.\n"
+        "  1. Разработчик запускает тестовую партию.\n",
+        "  2. Анализирует эффективность карт и стратегий.\n",
+        "  3. Вносит корректировки в параметры карт или правил.  \n",
+        "- **Результат:** Баланс игры улучшен.\n",
+        "\n",
+        "#### UC-103: Отладка и исправление ошибок\n",
+        "- **Актор:** Разработчик  \n",
+        "- **Предусловие:** Обнаружена ошибка в игре  \n",
+        "- **Сценарий:**\n",
+        "  1. Разработчик воспроизводит ошибку.\n",
+        "  2. Анализирует код и логи.\n",
+        "  3. Вносит исправления.\n",
+        "  4. Пересобирает билд.  \n",
+        "- **Результат:** Ошибка устранена.\n",
+        "\n",
+        "#### UC-104: Подготовка билда для публикации\n",
+        "- **Актор:** Разработчик  \n",
+        "- **Предусловие:** Завершена основная разработка  \n",
+        "- **Сценарий:**\n",
+        "  1. Разработчик собирает билд игры.\n",
+        "  2. Проверяет его стабильность.\n",
+        "  3. Загружает билд в систему распространения (например, Steam).  \n",
+        "- **Результат:** Игровой билд опубликован.\n",
+        "\n"
       ]
     }
   ],
