--- a/УПИС_Задание_№6.ipynb
+++ b/УПИС_Задание_№6.ipynb
@@ -171,9 +171,9 @@
         "- **Приоритет:** Высокий.  \n",
         "- **Критерий проверки:** Значения обновляются после каждого действия.\n",
         "\n",
-        "### 2.3. Поддержка игрока\n",
+        "### 2.3. QoL\n",
         "\n",
-        "**ФТ-008: Подсказки и обучение**  \n",
+        "**ФТ-008: Обучение**  \n",
         "- **Описание:** Система предоставляет базовое обучение для новых игроков.  \n",
         "- **Входные данные:** Выбор режима обучения.  \n",
         "- **Выходные данные:** Пошаговое обучение.  \n",
@@ -234,27 +234,28 @@
         "- **Критерий проверки:** Звуки соответствуют событиям.\n",
         "\n",
         "---\n",
-        "## 2. НЕФУНКЦИОНАЛЬНЫЕ ТРЕБОВАНИЯ\n",
+        "## 3. НЕФУНКЦИОНАЛЬНЫЕ ТРЕБОВАНИЯ\n",
         "\n",
-        "### НФТ-П-001: Использование ресурсов\n",
-        "- **Описание:** Игра должна стабильно работать на ПК с 6 ГБ ОЗУ и видеокартой уровня Intel HD Graphics 4000 / Radeon R7 без фризов.\n",
-        "- **Категория:** Производительность\n",
-        "- **Критерий проверки:** FPS не ниже 60\n",
+        "### 3.1. Требования к производительности\n",
+        "- **НФТ-П-001:** Игра должна стабильно работать на ПК с 6 ГБ ОЗУ и видеокартой уровня Intel HD Graphics 4000 / Radeon R7. FPS ≥ 60.  \n",
         "\n",
-        "### НФТ-Н-001: Доступность\n",
-        "- **Описание:** Игра должна быть доступна для запуска и прохождения без сбоев\n",
-        "- **Категория:** Надёжность\n",
-        "- **Критерий проверки:** Лог ошибок показывает не более 1 критического сбоя на 100 запусков\n",
+        "### 3.2. Требования к надежности и доступности\n",
+        "- **НФТ-Н-001:** Не более 1 критического сбоя на 100 запусков.  \n",
         "\n",
-        "### НФТ-Ю-001: Интуитивность интерфейса\n",
-        "- **Описание:** Игрок должен понимать базовые действия без обучения — начать игру, сделать ход, выбрать карту.\n",
-        "- **Категория:** Удобство использования\n",
-        "- **Критерий проверки:** 90% тестировщиков успешно совершают базовый ход без инструкций\n",
+        "### 3.3. Требования к безопасности\n",
+        "- **НФТ-Б-001:** Игра не хранит и не передаёт персональные данные.  \n",
+        "- **НФТ-Б-002:** Игровые данные защищены от некорректных изменений.  \n",
         "\n",
-        "### НФТ-С-002: Масштабируемость ИИ\n",
-        "- **Описание:** Сложность ИИ должна настраиваться от простого до продвинутого уровня.\n",
-        "- **Категория:** Масштабируемость\n",
-        "- **Критерий проверки:** Настройки сложности влияют на поведение ИИ в тестах\n",
+        "### 3.4. Требования к удобству использования\n",
+        "- **НФТ-Ю-001:** 90% игроков совершают базовый ход без инструкций.  \n",
+        "- **НФТ-Ю-002:** 80% игроков завершают обучение ≤ 10 минут.  \n",
+        "\n",
+        "### 3.5. Требования к совместимости и переносимости\n",
+        "- **НФТ-С-001:** Игра запускается на Windows 10+, любой дистрибутив Linux и Android 6.0+.  \n",
+        "- **НФТ-С-002:** Проект собирается в Unity без ошибок для платформ Windows, Linux, Android.  \n",
+        "\n",
+        "### 3.6. Требования к масштабируемости\n",
+        "- **НФТ-М-001:** Добавление новых карт и механик без изменения базового кода.\n",
         "\n",
         "\n",
         "---\n",
