--- a/УПИС_Задание_№5.ipynb
+++ b/УПИС_Задание_№5.ipynb
@@ -342,6 +342,25 @@
     },
     {
       "cell_type": "markdown",
+      "id": "ba93e3ae",
+      "metadata": {},
+      "source": [
+        "1.1 (Утверждение ТЗ и архитектуры) →\n",
+        "2.1 и 2.2 (Реализация игрового цикла и разработка карточек — выполняются параллельно, но обе необходимы для прототипа) →\n",
+        "2.3 (Первый внутренний прототип) →\n",
+        "2.4 (Публикация прототипа в Steam) →\n",
+        "3.1 (Проектирование логики ИИ) →\n",
+        "3.2 (Реализация базового ИИ) →\n",
+        "3.3 (Добавление стратегий поведения) →\n",
+        "3.4 (Плейтесты ИИ) →\n",
+        "4.1 и 4.2 (Интеграция QoL и доработка UI/UX — параллельные зависимости для следующего этапа) →\n",
+        "4.3 (Интеграция ИИ в игровой цикл) →\n",
+        "5.1 (Финальное тестирование) →\n",
+        "5.2 (Документация и презентация)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "3d353cee",
       "metadata": {},
       "source": [
