--- a/УПИС_Задание_№7.ipynb
+++ b/УПИС_Задание_№7.ipynb
@@ -131,8 +131,8 @@
         "\n",
         "#### 4.2.3. Технические характеристики\n",
         "- Платформы: Мобильные, PC\n",
-        "- Модель распространения: Freemium\n",
-        "- Движок: Собственный разработки\n",
+        "- Модель распространения: Premium (PC), Free (Mobile)\n",
+        "- Движок: Unity\n",
         "\n",
         "#### 4.2.4. Преимущества\n",
         "• Упрощенный геймплей по сравнению с классическими 4X\n",
@@ -141,7 +141,7 @@
         "• Кроссплатформенность\n",
         "\n",
         "#### 4.2.5. Недостатки\n",
-        "• Отсутствие карточных механик как основного элемента геймплея, т.е. линейность игрового процесса и отсутствия элемента \"случайности\" в основных механиках, случайность проявляется только в генерации игровой карты\n",
+        "• Линейность игрового процесса, элемент \"случайности\" проявляется только в процедурной генерации игровой карты\n",
         "\n",
         "### 4.3. Victoria 3\n",
         "\n",
@@ -149,7 +149,7 @@
         "Глобальная экономическая стратегия от Paradox Development Studio, симулирующая развитие стран в викторианскую эпоху с акцентом на экономику и политику.\n",
         "\n",
         "#### 4.3.2. Основные функциональные возможности\n",
-        "- Сложная экономическая система спроса и предложения\n",
+        "- Сложная экономическая система\n",
         "- Политические и социальные симуляции\n",
         "- Дипломатия и военные действия\n",
         "- Детализированная система управления страной\n",
@@ -177,6 +177,8 @@
         "\n",
         "• Отсутствие карточных механик как основного элемента геймплея\n",
         "\n",
+        "• Линейность игрового процесса\n",
+        "\n",
         "---\n",
         "\n",
         "**Ключевые аспекты для сравнения с Diceville:**\n",
@@ -198,14 +200,13 @@
         "### Balatro\n",
         "\n",
         "**Сильные стороны (S)**  \n",
-        "• Высокая реиграбельность за счет процедурной генерации  \n",
         "• Низкий порог входа и быстрое освоение механик  \n",
         "• Уникальная система комбинирования карт  \n",
         "• Оптимальная длительность партий (15-30 минут)\n",
+        "• Кроссплатформенность\n",
         "\n",
         "**Слабые стороны (W)**  \n",
-        "• Отсутствие ИИ-оппонента  \n",
-        "• Нет стратегических элементов  \n",
+        "• Отсутствие как такого ИИ-оппонента (отсутствие противником в привычном понимании)  \n",
         "• Ограниченное взаимодействие между игроками  \n",
         "• Отсутствие системы развития и строительства\n",
         "\n",
@@ -215,9 +216,8 @@
         "• Введение новых карточных механик\n",
         "\n",
         "**Угрозы (T)**  \n",
-        "• Появление аналогичных карточных рогаликов  \n",
-        "• Насыщение рынка карточными играми  \n",
-        "• Ограниченность целевой аудитории\n",
+        "• Появление аналогичных карточных рогаликов \n",
+        "• Появление однотипности в геймплее\n",
         "\n",
         "### The Battle of Polytopia\n",
         "\n",
@@ -228,10 +228,7 @@
         "• Кроссплатформенность\n",
         "\n",
         "**Слабые стороны (W)**  \n",
-        "• Ограниченная глубина стратегических решений  \n",
-        "• Повторяемость игрового процесса  \n",
-        "• Упрощенные карточные механики  \n",
-        "• Недостаточная вариативность стратегий ИИ\n",
+        "• Ограниченная глубина стратегических решений\n",
         "\n",
         "**Возможности (O)**  \n",
         "• Расширение технологического дерева  \n",
@@ -239,8 +236,8 @@
         "• Углубление дипломатической системы\n",
         "\n",
         "**Угрозы (T)**  \n",
-        "• Конкуренция с более глубокими стратегиями  \n",
-        "• Уход аудитории к более инновационным проектам  \n",
+        "• Конкуренция с более глубокими стратегиями\n",
+        "• Уход аудитории к более проработанным проектам  \n",
         "• Ограничения мобильной платформы\n",
         "\n",
         "### Victoria 3\n",
@@ -255,17 +252,13 @@
         "• Очень высокий порог входа для новых игроков  \n",
         "• Экстремально долгие партии (10+ часов)  \n",
         "• Перегруженный интерфейс  \n",
-        "• Отсутствие карточных механик\n",
         "\n",
         "**Возможности (O)**  \n",
-        "• Упрощение интерфейса для новой аудитории  \n",
-        "• Создание сокращенных игровых режимов  \n",
         "• Добавление обучающих систем\n",
         "\n",
         "**Угрозы (T)**  \n",
         "• Сужение аудитории из-за сложности  \n",
         "• Конкуренция с более доступными стратегиями  \n",
-        "• Быстрое устаревание технологического стека\n",
         "\n",
         "### Разрабатываемая система (Diceville)\n",
         "\n",
@@ -277,21 +270,18 @@
         "\n",
         "**Слабые стороны (W)**  \n",
         "• Новый продукт без установленной пользовательской базы  \n",
-        "• Ограниченные маркетинговые ресурсы  \n",
-        "• Отсутствие медицинской сертификации (если потребуется)  \n",
+        "• Ограниченные маркетинговые ресурсы   \n",
         "• Зависимость от успеха на конкурентном рынке\n",
         "\n",
         "**Возможности (O)**  \n",
         "• Заполнение ниши между простыми и сложными стратегиями  \n",
         "• Расширение на мобильные платформы  \n",
-        "• Создание сообщества и конкурентных лиг  \n",
-        "• Партнерства с игровыми платформами\n",
+        "• Создание сообщества\n",
         "\n",
         "**Угрозы (T)**  \n",
         "• Конкуренция с устоявшимися брендами  \n",
-        "• Быстрое копирование успешных механик конкурентами  \n",
-        "• Изменение предпочтений целевой аудитории  \n",
-        "• Технические ограничения движка Unity\n",
+        "• Быстрое копирование успешных механик конкурентами\n",
+        "• Изменение предпочтений целевой аудитории\n",
         "\n",
         "## 6. ТЕХНИЧЕСКИЙ СРАВНИТЕЛЬНЫЙ АНАЛИЗ\n",
         "\n",
@@ -310,10 +300,10 @@
         "\n",
         "| Критерий | Balatro | The Battle of Polytopia | Victoria 3 | Diceville |\n",
         "|---|---|---|---|---|\n",
-        "| **Простота использования** | ★★★★☆ | ★★★★☆ | ★★☆☆☆ | **★★★★★ (целевой)** |\n",
-        "| **Визуальный дизайн** | ★★★☆☆ | ★★★★☆ | ★★★☆☆ | **★★★★☆ (целевой)** |\n",
-        "| **Скорость работы** | ★★★★★ | ★★★★☆ | ★★★☆☆ | **★★★★☆ (целевой)** |\n",
-        "| **Обучаемость** | ★★★★☆ | ★★★★☆ | ★★☆☆☆ | **★★★★★ (целевой)** |\n",
+        "| **Простота использования** | ★★★★☆ | ★★★★☆ | ★★☆☆☆ | **★★★★★** |\n",
+        "| **Визуальный дизайн** | ★★★☆☆ | ★★★★☆ | ★★★☆☆ | **★★★★☆** |\n",
+        "| **Скорость работы** | ★★★★★ | ★★★★☆ | ★★★☆☆ | **★★★★☆** |\n",
+        "| **Обучаемость** | ★★★★☆ | ★★★★☆ | ★★☆☆☆ | **★★★★★** |\n",
         "\n",
         "**Легенда оценок:**  \n",
         "★★★★★ - Отлично  \n",
@@ -326,7 +316,7 @@
         "- Balatro и Polytopia демонстрируют хорошую юзабилити для своих целевых аудиторий\n",
         "- Victoria 3 страдает от перегруженности интерфейса и высокой сложности освоения\n",
         "- Diceville планирует сочетать простоту Balatro с глубиной Polytopia, избегая сложностей Victoria 3\n",
-        "- Особое внимание уделяется обучаемости и постепенному введению игровых механик\n",
+        "- Особое внимание уделяется обучаемости и постепенному введению игровых механик для нового игрока\n",
         "\n",
         "## 9. КОНКУРЕНТНЫЕ ПРЕИМУЩЕСТВА РАЗРАБАТЫВАЕМОГО РЕШЕНИЯ\n",
         "\n",
