--- a/УПИС_Задание_№7.ipynb
+++ b/УПИС_Задание_№7.ipynb
@@ -35,7 +35,7 @@
         "\n",
         "**Victoria 3**\n",
         "- *Критерий отбора*: Сложная экономическая стратегия с глубокой системой управления\n",
-        "- *Обоснование*: Демонстрирует продвинутые подходы к балансировке и экономическим системам\n",
+        "- *Обоснование*: Демонстрирует продвинутые подходы к экономическим системам, а также демонстрирует состояние подобных популярных игр от Paradox\n",
         "- *Релевантность*: Ценен для анализа сложных взаимосвязей в игровых системах\n",
         "\n",
         "**Дополнительные критерии отбора:**\n",
@@ -58,22 +58,18 @@
         "\n",
         "| Функция | Balatro | The Battle of Polytopia | Victoria 3 | Наш проект |\n",
         "|---|---|---|---|---|\n",
-        "| **Группа функций 1: Базовый игровой процесс** | | | | |\n",
-        "| Баланс случайности и стратегии | ++ |+ |- |++ |\n",
-        "| Пошаговая система | ++ | ++ | ++ | ++ |\n",
-        "| Условия победы | + | ++ | ++ | ++ |\n",
-        "| **Группа функций 2: Карточные механики** | | | | |\n",
+        "| **Группа функций 1: Карточные механики** | | | | |\n",
         "| Использование карт | ++ | + | - | ++ |\n",
         "| Управление колодой | ++ | - | - | ++ |\n",
-        "| **Группа функций 3: Стратегические элементы** | | | | |\n",
+        "| **Группа функций 2: Стратегические элементы** | | | | |\n",
         "| Контроль территории | - | ++ | ++ | ++ |\n",
         "| Строительство зданий | - | ++ | ++ | ++ |\n",
         "| Управление ресурсами | + | ++ | ++ | ++ |\n",
-        "| **Группа функций 4: Система ИИ** | | | | |\n",
+        "| **Группа функций 3: Система ИИ** | | | | |\n",
         "| ИИ-оппонент | - | ++ | ++ | ++ |\n",
         "| Адаптивная сложность | - | + | ++ | ++ |\n",
         "| Разнообразие стратегий ИИ | - | + | ++ | ++ |\n",
-        "| **Группа функций 5: Пользовательский опыт** | | | | |\n",
+        "| **Группа функций 4: Пользовательский опыт** | | | | |\n",
         "| Обучение и руководство | + | ++ | + | ++ |\n",
         "| Настройки игры | + | ++ | ++ | ++ |\n",
         "| Визуальные эффекты | + | ++ | ++ | ++ |\n",
@@ -289,8 +285,8 @@
         "\n",
         "| Характеристика | Balatro | The Battle of Polytopia | Victoria 3 | Diceville |\n",
         "|---|---|---|---|---|\n",
-        "| **Архитектура** | Монолитная | Модульная микросервисная | Монолитная с плагинами | **Модульная на Unity** |\n",
-        "| **Технологический стек** | Не раскрывается | Собственный движок | Clausewitz Engine | **Unity** |\n",
+        "| **Архитектура** | Неизвестно | Неизвестно | Неизвестно | **Модульная на Unity** |\n",
+        "| **Технологический стек** | Lua | Unity | Clausewitz Engine | **Unity** |\n",
         "| **Производительность** | Высокая на всех платформах | Высокая на всех платформах | Средняя | **Высокая** |\n",
         "| **Масштабируемость** | Ограниченная | Хорошая | Хорошая | **Хорошая** |\n",
         "\n",
@@ -301,7 +297,7 @@
         "| Критерий | Balatro | The Battle of Polytopia | Victoria 3 | Diceville |\n",
         "|---|---|---|---|---|\n",
         "| **Простота использования** | ★★★★☆ | ★★★★☆ | ★★☆☆☆ | **★★★★★** |\n",
-        "| **Визуальный дизайн** | ★★★☆☆ | ★★★★☆ | ★★★☆☆ | **★★★★☆** |\n",
+        "| **Визуальный дизайн** | ★★★☆☆ | ★★★★☆ | ★★★★☆ | **★★★★☆** |\n",
         "| **Скорость работы** | ★★★★★ | ★★★★☆ | ★★★☆☆ | **★★★★☆** |\n",
         "| **Обучаемость** | ★★★★☆ | ★★★★☆ | ★★☆☆☆ | **★★★★★** |\n",
         "\n",
@@ -314,7 +310,7 @@
         "\n",
         "**Ключевые выводы по UX/UI анализу:**\n",
         "- Balatro и Polytopia демонстрируют хорошую юзабилити для своих целевых аудиторий\n",
-        "- Victoria 3 страдает от перегруженности интерфейса и высокой сложности освоения\n",
+        "- Victoria 3 страдает от перегруженности интерфейса и высокой сложности освоения, однако имеет для своего жанра хороший UI/UX дизайн\n",
         "- Diceville планирует сочетать простоту Balatro с глубиной Polytopia, избегая сложностей Victoria 3\n",
         "- Особое внимание уделяется обучаемости и постепенному введению игровых механик для нового игрока\n",
         "\n",
@@ -354,7 +350,7 @@
         "\n",
         "**Описание:** Сбалансированная длительность партий 20-40 минут, подходящая для различных игровых scenarios.\n",
         "\n",
-        "**Обоснование:** Анализ показал проблему либо слишком коротких (Balatro), либо чрезмерно долгих (Victoria 3) игровых сессий.\n",
+        "**Обоснование:** Анализ показал проблему чрезмерно долгих (Victoria 3) игровых сессий в играх, с большой глубиной геймплея.\n",
         "\n",
         "**Ценность для пользователя:** Возможность играть в удобное время, поддержание интереса на протяжении всей партии.\n",
         "\n",
@@ -364,7 +360,7 @@
         "\n",
         "### 10.1. Первичная целевая аудитория\n",
         "\n",
-        "**Описание:** Геймеры 18-35 лет, ценящие стратегические и настольные игры.\n",
+        "**Описание:** Геймеры 18-35 лет, ценящие настольные игры и жанр стратегий.\n",
         "\n",
         "**Характеристики:**\n",
         "- Опыт в мобильных и компьютерных играх\n",
@@ -397,7 +393,7 @@
         "\n",
         "### 11.1. Общие выводы по анализу рынка\n",
         "\n",
-        "Рынок стратегических игр сегментирован между простыми казуальными решениями и сложными хардкорными проектами. Существует значительная ниша для продукта, сочетающего доступность с глубиной геймплея. Карточные игры демонстрируют устойчивый рост, но редко сочетаются с полноценными стратегическими элементами.\n",
+        "Рынок стратегических игр сегментирован между простыми казуальными решениями и сложными хардкорными проектами. Существует значительная ниша для продукта, сочетающего доступность с глубиной геймплея. Карточные игры демонстрируют устойчивый рост, но редко сочетаются с полноценными стратегическими элементами, такими как градостроительство.\n",
         "\n",
         "### 11.2. Обоснование актуальности проекта\n",
         "\n",
@@ -409,7 +405,7 @@
         "\n",
         "### 11.3. Позиционирование разрабатываемого решения\n",
         "\n",
-        "Diceville позиционируется как \"стратегическая карточная игра нового поколения\", занимающая промежуточное положение между казуальными и хардкорными проектами. Уникальное ценностное предложение - оптимальный баланс между глубиной и доступностью.\n",
+        "Diceville позиционируется как \"стратегическая карточная игра, вдохновленный настольными играми\", занимающая промежуточное положение между казуальными и хардкорными проектами. Уникальное ценностное предложение - оптимальный баланс между глубиной и доступностью.\n",
         "\n",
         "### 11.4. Риски и ограничения\n",
         "\n",
@@ -425,9 +421,7 @@
         "\n",
         "**Стратегии минимизации:**\n",
         "- Поэтапное тестирование и итерационная балансировка\n",
-        "- Создание активного сообщества и сбор обратной связи\n",
-        "- Фокус на уникальном ценностном предложении при маркетинге\n",
-        "- Партнерства с игровыми блогерами и стримерами\n",
+        "- Создание активного сообщества (участие в мероприятиях) и сбор обратной связи\n",
         "\n",
         "## СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ\n",
         "\n",
