--- a/УПИС_Задание_№7.ipynb
+++ b/УПИС_Задание_№7.ipynb
@@ -34,7 +34,7 @@
         "- *Релевантность*: Аналогичные механики территориального контроля и развития\n",
         "\n",
         "**Victoria 3**\n",
-        "- *Критерий отбора*: Сложная экономическая стратегия с глубокой системой управления\n",
+        "- *Критерий отбора*: Сложная экономическая стратегия с проработанной системой управления\n",
         "- *Обоснование*: Демонстрирует продвинутые подходы к экономическим системам, а также демонстрирует состояние подобных популярных игр от Paradox\n",
         "- *Релевантность*: Ценен для анализа сложных взаимосвязей в игровых системах\n",
         "\n",
@@ -48,7 +48,7 @@
         "\n",
         "| № | Название | Разработчик | Тип | Целевая аудитория |\n",
         "|---|---|---|---|---|\n",
-        "| 1 | Balatro | LocalThunk | Карточный рогалик | Игроки, ценящие глубокие карточные механики и реиграбельность |\n",
+        "| 1 | Balatro | LocalThunk | Карточный рогалик | Игроки, ценящие проработанные карточные механики и реиграбельность |\n",
         "| 2 | The Battle of Polytopia | Midjiwan | Пошаговая стратегия | Любители стратегий, предпочитающие доступный геймплей |\n",
         "| 3 | Victoria 3 | Paradox Development Studio | Экономическая стратегия | Опытные игроки, интересующиеся глубокой и интересной  |\n",
         "\n",
@@ -239,7 +239,7 @@
         "### Victoria 3\n",
         "\n",
         "**Сильные стороны (S)**  \n",
-        "• Невероятная глубина экономических систем  \n",
+        "• Проработанная экономических систем  \n",
         "• Продвинутый ИИ с адаптивными стратегиями  \n",
         "• Высокая историческая достоверность  \n",
         "• Обширные возможности для стратегического планирования\n",
@@ -290,6 +290,10 @@
         "| **Производительность** | Высокая на всех платформах | Высокая на всех платформах | Средняя | **Высокая** |\n",
         "| **Масштабируемость** | Ограниченная | Хорошая | Хорошая | **Хорошая** |\n",
         "\n",
+        "### 6.1 Конкурентное преимущество (Уникальное Торговое Предложение - УТП)\n",
+        "\n",
+        "Diceville является игрой промежуточной между казуальными и хардкорными проектами, сочетая в себе и глубину и простоту, в отличие от Balatro и Victoria 3, благодаря уникальным сочетаниям механик градостроительсва, системы колод и элементами настольных игр (броски кубиков и прочие). Уникальное ценностное предложение - оптимальный баланс между глубиной и доступностью.\n",
+        "\n",
         "## 7. UX/UI АНАЛИЗ\n",
         "\n",
         "### Таблица 4. Сравнение пользовательского опыта\n",
@@ -320,7 +324,7 @@
         "\n",
         "**Описание:** Идеальное сочетание стратегической глубины и низкого порога входа, позволяющее новым игрокам быстро освоить механику, а опытным - наслаждаться тактическими возможностями.\n",
         "\n",
-        "**Обоснование:** Анализ показал, что существующие решения либо слишком просты (Balatro), либо чрезмерно сложны (Victoria 3). Diceville заполняет эту нишу, предлагая постепенное обучение и нарастающую сложность.\n",
+        "**Обоснование:** Анализ показал, что существующие решения либо слишком просты (Balatro), либо чрезмерно сложны (Victoria 3). Diceville заполняет эту нишу.\n",
         "\n",
         "**Ценность для пользователя:** Быстрое погружение в игру без потери стратегической глубины, возможность играть как в короткие, так и в продолжительные сессии.\n",
         "\n",
