--- a/УПИС_Задание_№7.ipynb
+++ b/УПИС_Задание_№7.ipynb
@@ -24,7 +24,7 @@
         "Для проведения комплексного анализа выбраны следующие системы-аналоги на основе следующих критериев:\n",
         "\n",
         "**Balatro**\n",
-        "- *Критерий отбора*: Карточный рогалик с уникальной механикой комбинирования карт\n",
+        "- *Критерий отбора*: Карточный roguelike с уникальной механикой комбинирования карт\n",
         "- *Обоснование*: Демонстрирует инновационные подходы к карточному геймплею и высокой реиграбельности\n",
         "- *Релевантность*: Имеет интересную реализацию карточных механик, которую можно сравнить таковой в Diceville\n",
         "\n",
@@ -85,12 +85,12 @@
         "### 4.1. Balatro\n",
         "\n",
         "#### 4.1.1. Общее описание\n",
-        "Карточный рогалик, разработанный независимым разработчиком LocalThunk. Игра сочетает элементы покера и рогалика, где игрок создает комбинации карт для достижения высоких результатов.\n",
+        "Карточный roguelike, разработанный независимым разработчиком LocalThunk. Игра сочетает элементы покера и roguelike, где игрок создает комбинации карт для достижения высоких результатов.\n",
         "\n",
         "#### 4.1.2. Основные функциональные возможности\n",
         "- Система комбинирования покерных рук\n",
         "- Прокачка и модификация карт между раундами\n",
-        "- Рогалик-механики с перманентными улучшениями\n",
+        "- Rogulike-механики с перманентными улучшениями\n",
         "- Разнообразные джокеры и бонусные карты\n",
         "\n",
         "#### 4.1.3. Технические характеристики\n",
@@ -212,7 +212,7 @@
         "• Введение новых карточных механик\n",
         "\n",
         "**Угрозы (T)**  \n",
-        "• Появление аналогичных карточных рогаликов \n",
+        "• Появление аналогичных карточных roguelike \n",
         "• Появление однотипности в геймплее\n",
         "\n",
         "### The Battle of Polytopia\n",
