--- a/УПИС_Задание_№7.ipynb
+++ b/УПИС_Задание_№7.ipynb
@@ -50,7 +50,7 @@
         "|---|---|---|---|---|\n",
         "| 1 | Balatro | LocalThunk | Карточный рогалик | Игроки, ценящие проработанные карточные механики и реиграбельность |\n",
         "| 2 | The Battle of Polytopia | Midjiwan | Пошаговая стратегия | Любители стратегий, предпочитающие доступный геймплей |\n",
-        "| 3 | Victoria 3 | Paradox Development Studio | Экономическая стратегия | Опытные игроки, интересующиеся глубокой и интересной  |\n",
+        "| 3 | Victoria 3 | Paradox Development Studio | Экономическая стратегия | Опытные игроки  |\n",
         "\n",
         "## 3. ФУНКЦИОНАЛЬНЫЙ СРАВНИТЕЛЬНЫЙ АНАЛИЗ\n",
         "\n",
