--- a/УПИС_Задание_№8 (N).ipynb
+++ b/УПИС_Задание_№8 (N).ipynb
@@ -7,7 +7,11 @@
       "source": [
         "# СТРАТЕГИЯ ТЕСТИРОВАНИЯ\n",
         "\n",
-        "## 1.1. Цели и задачи\n",
+        "## 1. Введение\n",
+        "\n",
+        "Цель: Обеспечить соответствие информационной системы функциональным и нефункциональным требованиям, выявить дефекты до релиза в продуктивную среду.\n",
+        "\n",
+        "Область применения: Diceville, версия 1.1.9\n",
         "\n",
         "**Цели тестирования:**\n",
         "- Верификация соответствия игры Diceville функциональным требованиям из спецификации\n",
@@ -27,29 +31,24 @@
         "- Функциональность игрового процесса (запуск партии, ходы, карты, строительство)\n",
         "- Система ИИ-оппонента\n",
         "- Пользовательский интерфейс и UX\n",
-        "- Система обучения и помощи\n",
+        "- Система обучения\n",
         "- Настройки игры (звук, графика, управление)\n",
         "- Производительность и стабильность\n",
         "- Совместимость с Windows 10+ и Linux\n",
         "\n",
         "**Исключено:**\n",
-        "- Модульное тестирование кода (только ручное тестирование)\n",
+        "- Модульное тестирование кода (без автотестов)\n",
         "\n",
         "## 1.3. Виды тестирования\n",
         "\n",
-        "**Основные виды тестирования:**\n",
-        "- Функциональное тестирование\n",
-        "- Тестирование пользовательского интерфейса (UI)\n",
-        "- Тестирование удобства использования (Usability)\n",
-        "- Тестирование производительности\n",
-        "- Тестирование совместимости\n",
-        "- Регрессионное тестирование\n",
-        "- Приемочное тестирование (UAT)\n",
+        "1.3.1. Функциональное тестирование\n",
         "\n",
-        "**Специализированные виды для игры:**\n",
-        "- Тестирование игрового баланса\n",
-        "- Тестирование ИИ-оппонента\n",
-        "- Тестирование обучающей системы\n",
+        "    Метод: Ручное тестирование на основе тест-кейсов\n",
+        "    Охват: Все требования с приоритетом \"Критический\" и \"Высокий\"\n",
+        "    Ответственный: Тестировщики\n",
+        "\n",
+        "1.3.2. Тестирование производительности\n",
+        "\n",
         "\n",
         "## 1.4. Инструменты тестирования\n",
         "\n",
@@ -67,14 +66,14 @@
         "- Собран стабильный билд игры с реализованными основными функциями\n",
         "- Подготовлено тестовое окружение (ПК с Windows 10, Linux)\n",
         "- Сформирована команда тестировщиков (5-10 человек)\n",
-        "- Разработаны тест-кейсы и чек-листы\n",
+        "- Информирование о новом функционале каким-либо образом\n",
         "\n",
         "**Exit Criteria:**\n",
         "- Все критические и высокоприоритетные дефекты исправлены\n",
         "- Покрытие требований ≥ 95% для критических функций\n",
         "- Успешное прохождение ≥ 98% критических тест-кейсов\n",
         "- Положительные оценки юзабилити от ≥ 80% тестировщиков\n",
-        "- Стабильная работа игры в течение 10 тестовых партий подряд\n",
+        "- Стабильная работа игры в течение нескольких тестовых партий подряд\n",
         "\n",
         "## 1.6. Метрики качества\n",
         "\n",
@@ -83,15 +82,9 @@
         "- Покрытие нефункциональных требований: ≥ 90%\n",
         "- Покрытие пользовательских сценариев: 100%\n",
         "\n",
-        "**Метрики дефектов:**\n",
-        "- Плотность дефектов: ≤ 2 дефекта/тест-кейс\n",
-        "- Эффективность обнаружения дефектов: ≥ 90%\n",
-        "- Соотношение критических/некритических дефектов: 1:4\n",
-        "\n",
         "**Метрики производительности:**\n",
         "- Стабильный FPS ≥ 60 на целевых системах\n",
         "- Время загрузки игры: ≤ 10 секунд\n",
-        "- Время отклика интерфейса: ≤ 100 мс\n",
         "\n",
         "**Метрики юзабилити:**\n",
         "- 90% игроков совершают базовый ход без инструкций\n",
@@ -110,7 +103,7 @@
         "| Название | Успешный запуск новой партии против ИИ |\n",
         "| Приоритет | Критический |\n",
         "| Тип | Функциональное, позитивное |\n",
-        "| Связь с требованиями | ФТ-001, UC-001 |\n",
+        "| Связь с требованиями | ФТ-001 |\n",
         "\n",
         "**Предусловия:**\n",
         "- Игра установлена и запущена\n",
@@ -426,12 +419,9 @@
         "\n",
         "| Этап | Начало | Окончание | Ответственный |\n",
         "|------|--------|-----------|---------------|\n",
-        "| Подготовка тестового окружения | 01.06.2024 | 02.06.2024 | Тест-менеджер |\n",
-        "| Функциональное тестирование | 03.06.2024 | 07.06.2024 | Тестировщики (5 чел) |\n",
-        "| Нефункциональное тестирование | 10.06.2024 | 12.06.2024 | Тестировщики (3 чел) |\n",
-        "| Юзабилити-тестирование | 13.06.2024 | 14.06.2024 | Все тестировщики |\n",
-        "| Регрессионное тестирование | 17.06.2024 | 18.06.2024 | Тестировщики (5 чел) |\n",
-        "| Приемочное тестирование | 19.06.2024 | 20.06.2024 | Заказчик |\n",
+        "| Функциональное тестирование | 01.10.2025 | 01.02.2026 | Все тестировщики |\n",
+        "| Нефункциональное тестирование | 01.10.2025 | 01.02.2026 | Все тестировщики |\n",
+        "| Юзабилити-тестирование | 01.10.2025 | 01.02.2026 | Все тестировщики |\n",
         "\n",
         "# КРИТЕРИИ ПРОХОЖДЕНИЯ ТЕСТИРОВАНИЯ\n",
         "\n",
